# ml-conduit

./: README.md  ml-conduit.cabal
.stack-work/install/x86_64-osx/lts-8.22/8.0.2/flag-cache/: async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  attoparsec-0.13.1.0-IEEYoTzFh3JE4HjRWbqraH  base16-bytestring-0.1.1.6-4E2p94lTx8gIceMhu8Kl9o  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  blaze-builder-0.4.0.2-CGB8BvrFgghHy5bLy0SFOg  chunked-data-0.3.0-9yVtbG7WxDXAouokjxBoYn  conduit-1.2.11-8fzDXEM0qjX9eUYghCjgI2  conduit-combinators-1.1.1-39sYqADlebYjJA4JTedP  conduit-extra-1.1.16-9yzUBkCROdh3bKF2AOvf4T  exceptions-0.8.3-ADEDRATtUrMK1JW4zMQ9U  hashable-1.2.6.1-I8TtfTMw8kCEo1q1h2BgxU  integer-logarithms-1.0.1-IEHCuEd5sG4JjSjlx7m5JF  lifted-base-0.2.3.11-GQ8h0b1wJUC11xTxTtHqWV  math-functions-0.2.1.0-JNickpnTA2s6HQEMSD4Mt1  mmorph-1.0.9-5bASEvmIkr5CpdAYXwPsn0  monad-control-1.0.2.1-CqOqIBYVBjy1GnPfyWnFHC  mono-traversable-1.0.2-G7BeaJ4EMwDvqHvSNPeZJ  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  mwc-random-0.13.6.0-4EKMGw6QfaJLMhRUSL730j  network-2.6.3.2-IsLM4TXcLoRI0fmmBYVyQz  primitive-0.6.1.0-6AbSTw9JXz141LE5p6LGH  random-1.1-9tceXaeYIMZ4JrKq20Egog  resourcet-1.1.9-4kJNagEzSAo2Kfakyf6y5E  scientific-0.3.5.1-ExDzxC7QmbS5TvW39AAm4A  semigroups-0.18.2-GvTCUro9Hym1wGKOLNRfUA  split-0.2.3.2-CJl40zTyCIV16Pr60nb7CT  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  streaming-commons-0.1.17-ANLyYjCKvHm5Mv911o5sOC  text-1.2.2.1-Ji7hMs2U4BkBwavd4taEVR  transformers-base-0.4.4-GKSs0LKukAL8ymq2naFmrH  (+8 more)
src/Models/: LinearRegression.hs
src/Types/: LinearRegressionUtils.hs  VectorOperations.hs
